[package]
name = "dokka"
version = "0.1.0"
authors = ["Michel Perez <michel.ingesoft@gmail.com>"]

[features]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
dox = ["gdk/dox", "gtk-sys/dox"]

[dependencies]
gtk = "0.4.1"
gio = "0.4.0"
gdk = "0.8.0"
gtk-sys = "0.6.0"
serde_json = "1.0.18"
serde = "1.0.63"
serde_derive = "1.0.63"
